<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_peliculas">

    <fragment
        android:id="@+id/navigation_peliculas"
        android:name="com.example.myapplication.ui.peliculas.PeliculasFragment"
        android:label="@string/title_peliculas"
        tools:layout="@layout/fragment_peliculas" />

    <fragment
        android:id="@+id/navigation_combos"
        android:name="com.example.myapplication.ui.comida.CombosFragment"
        android:label="@string/title_combos"
        tools:layout="@layout/fragment_combos" />

    <fragment
        android:id="@+id/navigation_ajustes"
        android:name="com.example.myapplication.ui.ajustes.AjustesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_ajustes" />
</navigation>