<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Registro">

    <ImageView
        android:layout_marginTop="75dp"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" /><!-- Reemplaza con la imagen de tu logotipo -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/registration_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorTitulo" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name_hint"
        android:textColor="@color/colorTextoPrimario"
        android:textColorHint="@color/colorTextoSecundario" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextoPrimario"
        android:textColorHint="@color/colorTextoSecundario" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorTextoPrimario"
        android:textColorHint="@color/colorTextoSecundario" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBoton"
        android:text="@string/register_button_text" />

</LinearLayout>
